--- a/.htaccess
+++ b/.htaccess
@@ -14,3 +14,8 @@ Options -MultiViews
   RewriteEngine On
   RewriteRule ^soap$ server.php [NC,QSA,L]
 </IfModule>
+
+# Block users from browsing folders without a default document
+<IfModule mod_autoindex.c>
+  Options -Indexes
+</IfModule>
